--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "elitenest-realty",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },   
   "dependencies": {
-    "express": "^4.19.2",
-    "nodemon": "^3.1.4"
+    "next": "14.2.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
