--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "bcryptjs": "^2.4.3",
+    "firebase": "^10.12.3",
     "framer-motion": "^11.2.13",
     "next": "14.2.4",
     "react": "^18",
