--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.6",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "firebase": "^10.12.3",
     "framer-motion": "^11.2.13",
+    "lucide-react": "^0.427.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -22,6 +28,8 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "tailwind-merge": "^2.5.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
